# knowledge-middleware

./: .editorconfig  .env.local  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile.report  Makefile  README.md  api.env  api.env.sample  create.py  docker-bake.hcl  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  env.sample  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yaml  pytest_workflow.yml  report.yaml
api/: Dockerfile  models.py  server.py  tds.py  utils.py
lib/: auth.py  settings.py
model_dataset_linking/: Dockerfile  README.md  demo.ipynb  embed.py  evaluate.py  example_objects.py  find.py  model_dataset_linker_software_reqs.docx  model_dataset_linking.py  requirements.txt  utils.py
model_dataset_linking/eval_dataset/: eval_2.json  eval_dataset.py  eval_one_to_few_document.json  one_to_many_documents.json
model_dataset_linking/eval_datasets/: eval_datasets_scratchpad.py  one_to_many_features.json  one_to_one_features.json
report/: Dockerfile
reporting/: README.md  docker-compose.yaml  env.sample
reporting/scenarios/12 Month Eval Scenario 1/: description.txt
reporting/scenarios/12 Month Eval Scenario 3/: description.txt
reporting/scenarios/12_month_eval_scenario_3/: code.py
reporting/scenarios/Antarctic Ice Shelf/: description.txt
reporting/scenarios/CHIME_SVIIvR/: description.txt
reporting/scenarios/CHIME_SVIIvR Code/: description.txt
reporting/scenarios/CHIME_SVIIvR Equations/: description.txt
reporting/scenarios/Penn CHIME/: repo_url.txt
reporting/scenarios/SIDARTHE/: text.json
reporting/scenarios/SIDARTHE Code/: description.txt
reporting/scenarios/SIDARTHE Equations/: description.txt  equations.latex.txt
reporting/scenarios/SIR/: description.txt
reporting/scenarios/SIR Dynamics/: description.txt
reporting/tests/: Dockerfile  report.py  requirements.txt  run_tests.sh  seed.py  utils.py
tests/: Dockerfile  Home.py  amr.json  conftest.py  create_table.py  operation_tests.py  report.py  resources.yaml  scenario.py  show_report.py  test_code_to_amr.py  test_e2e.py  test_equations_to_amr.py  test_integration.py  test_utils.py  tests.py  utils.py
tests/models/sidarthe/: sidarthe-short.txt  test_sidarthe_model_card.py
tests/output/: qual.csv  tests.json
tests/pages/: 1_TA1.py
tests/resources/basic_profile_model/: text.json
tests/scenarios/12_month_eval_scenario_1/: code.py  config.yaml
tests/scenarios/12_month_eval_scenario_3/: code.py  config.yaml
tests/scenarios/CHIME_SVIIvR/: code.py  config.yaml  equations.txt
tests/scenarios/basic/: amr.json  code.py  config.yaml  cosmos_equations.json  cosmos_figures.json  cosmos_result.json  data_card.json  dynamics.json  equations.txt  extractions.json  model_card.json  text.json
tests/scenarios/basic/code/: code.py
tests/scenarios/sidarthe/: code.py  config.yaml  ground_truth_model_card.json  text.json
tests/scenarios/sidarthe/cosmos_ground_truth/: stub.yaml
tests/test_code_to_amr/: amr.json  test_code_to_amr.py
tests/test_equations_to_amr/: amr.json  test_equations_to_amr.py
tests/test_pdf_extractions/: conftest.py  test_pdf_extractions.py
tests/test_pdf_to_text/: test_pdf_to_text.py
tests/test_profile_dataset/: data_card.json  test_profile_dataset.py
tests/test_profile_model/: test_profile_model.py
worker/: Dockerfile  operations.py  utils.py
workers/: Dockerfile  operations.py  utils.py
