[tool.poetry]
name = "knowledge-middleware"
version = "1.6.0"
description = ""
authors = ["Powell Fendley"]
readme = "README.md"
packages = [{include = "lib"}, {include = "worker"}, {include = "api"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.6.0"
rq = "^1.15.1"
pydantic = "^2.0.2"
idna = "^3.4"
python-multipart = "^0.0.6"
pandas = "^2.0.3"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"
streamlit = "^1.26.0"


[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
uvicorn = "^0.22.0"
fastapi = "^0.100.0"
pypdf = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
fakeredis = "^2.18.0"
pytest-cov = "^4.1.0"
jsonschema = "^4.19.0"
yamllint = "^1.32.0"
poethepoet = "^0.22.0"
requests-mock = "^1.11.0"
pyyaml = "^6.0.1"
pre-commit = "^3.3.3"
pytest-json-report = "^1.5.0"


[tool.poetry.scripts]
gen-report = "tests.report:report"

[tool.poe.tasks]
_test = "pytest --json-report --json-report-file=tests/output/tests.json"
_report = "gen-report"
_html = "python3 tests/create_table.py"
report = ["_test", "_report", "_html"]

[tool.pytest.ini_options]
markers = ["resource"]
python_files = ["tests/test_e2e.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
